specialist js level-2 - Расширенные возможности
end module 2

Использование элементов HTML:
Свойства и методы элемента Form
Свойства и методы элемента Input
Свойства и методы элемента TextArea
Свойства и методы элемента Select
Свойства и методы элемента Option
Свойства и методы элемента Image
Свойства и методы элемента Table

--- a/cources/specialist/уровень-2/module-2/lab-2-2.html
+++ b/cources/specialist/уровень-2/module-2/lab-2-2.html
@@ -16,7 +16,24 @@
 	5. Кроссбраузерно добавьте созданный элемент в начало или конец списка
 */
 	function addYear(flag){
-	
+		var s = document.forms[0].year;
+		if (flag) {
+			var x = s.options[s.length-1].value * 1 + 1;
+			var o = new Option(x, x, false, true);
+			try{
+				s.add(o,null);
+			} catch(e) {
+				s.add(o);
+			}
+		} else {
+			var x = s.options[0].value * 1 - 1;
+			var o = new Option(x, x, false, true);
+			try{
+				s.add(o, s.options[0]);
+			} catch(e) {
+				s.add(o, 0);
+			}
+		}
 	}
 </script>
 </head>
