--- a/cources/specialist/уровень-2/module-4/lab-4-1.html
+++ b/cources/specialist/уровень-2/module-4/lab-4-1.html
@@ -5,13 +5,13 @@
 	<title>Раскрывающейся списка</title>
 	<meta charset="utf-8">
 	<style type="text/css">
-		ul.expandable li { list-style-image: url('../../images/point.gif') }
-		li ul.expandable { display: block } /* выставить в none */
+		ul.expandable li { list-style-image: url('point.gif') }
+		li ul.expandable { display: none } /* выставить в none */
 	</style>
 	<script type="text/javascript">
 		/*
-			Опишите функцию setPlusIcon(), которая 
-			- устанавливает для элементов li значок [+], 
+			Опишите функцию setPlusIcon(), которая
+			- устанавливает для элементов li значок [+],
 				если этот элемент имеет вложенный список
 			- регистрирует функцию aClick в качестве обработчика события onclick
 				для всех ссылок
@@ -19,20 +19,59 @@
 		/*
 			Запустите функцию setPlusIcon() при загрузке страницы
 		*/
-		function setPlusIcon(){
+		/*function setPlusIcon(){
+			var allLis = document.getElementsByTagName('LI');
+																		console.log(allLis);
+			for (var i = 0; i < allLis.length; i++) {
+				var li = allLis[i];
+				var allUls = li.getElementsByTagName("UL");
+																		console.log(allUls);
+				if (allUls.length > 0) {
+					if (allUls[0].className == "expandable") {
+						li.style.listStyleImage = "url('plus.gif')";
+					}
+				}
+				var allA = document.getElementsByTagName("A");
+				for (var i = 0; i < allA.length; i++) {
+					allA[i].addEventListener('click', aClick);
+				}
+			}
 		}
-		/*
-			Опишите функцию aClick(), которая обрабатывает щелчок по ссылке
-			1. Получите объект - ссылку, по которой был сделан щелчок 
-			2. Найдите родительский li
-			3. Найдите вложенный список
-			4. Если вложенных списков нет - разрешите переход по ссылке
-			5. Назначьте вложенному списку нужные свойства и поменяйте иконку
-			6. Запретите переход по ссылке
-		*/
+		window.onload = setPlusIcon;*/
+
+		function setPlusIcon() {
+			var allLIs = document.getElementsByTagName("LI");
+			for(var i=0; i<allLIs.length; i++){
+				var li = allLIs[i];
+				var allULs = li.getElementsByTagName("UL");
+				if(allULs.length > 0){
+					if(allULs[0].className == "expandable")
+							li.style.listStyleImage = "url('plus.gif')";
+				}
+			}
+			var allA = document.getElementsByTagName("A");
+			for(var i=0; i<allA.length; i++){
+				allA[i].addEventListener('click', aClick);
+			}
+		}
+		window.onload  = setPlusIcon;
+
 		function aClick(e){
-		}	
-		
+			e = e || event;
+			objA = e.target || e.srcElement;
+			var li =  objA.parentNode;
+			var uls = li.getElementsByTagName("UL");
+			if (uls.length == 0) { return true; }
+			if (uls[0].style.display == "") {
+				uls[0].style.display = "block";
+				li.style.listStyleImage = "url('minus.gif')";
+			} else {
+				uls[0].style.display = "";
+				li.style.listStyleImage = "url('plus.gif')";
+			}
+			e.preventDefault();
+		}
+
 	</script>
 </head>
 
