--- a/cources/specialist/уровень-3/module-3/demo-3-2.html
+++ b/cources/specialist/уровень-3/module-3/demo-3-2.html
@@ -36,7 +36,7 @@
                         )
                         .animate(
                                 {'top': 500},
-                                {duration: 3000, queue: true}
+                                {duration: 3000, queue: true} // false  - запустить одновременно
                         );
             });
 
