--- a/cources/codeschool/es2015/level-2/part-2/rest-parameter-spread-operator-arrow-functions/index.html
+++ b/cources/codeschool/es2015/level-2/part-2/rest-parameter-spread-operator-arrow-functions/index.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Declarations with let</title>
+    <title>Rest Parameter, Spread Operator, and Arrow Functions</title>
 </head>
 <body>
 
 <script src="main.js"></script>
-<script>
-    loadProfiles(["Sam", "Tyler", "Sam", "Bite"]);
-</script>
+<script></script>
 </body>
 </html>
