--- a/courses/others/-learn.javascript/js/array.html
+++ b/courses/others/-learn.javascript/js/array.html
@@ -183,6 +183,270 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+        /*В объекте есть свойство className, которое содержит список «классов» – слов, разделенных пробелом:*/
+
+        /*Решение заключается в превращении obj.className в массив при помощи split. После этого в нем можно проверить наличие класса, и если нет – добавить.*/
+        function addClass(obj, cls) {
+            var classes = obj.className ? obj.className.split(' ') : [];
+
+            for (var i = 0; i < classes.length; i++) {
+                if (classes[i] == cls) return; // класс уже есть
+            }
+
+            classes.push(cls); // добавить
+
+            obj.className = classes.join(' '); // и обновить свойство
+        }
+
+        var obj = {
+            className: 'open menu'
+        };
+
+        addClass(obj, 'new');
+        addClass(obj, 'open');
+        addClass(obj, 'me');
+        console.log(obj.className); // open menu new me
+
+
+
+
+        /*Перевести текст вида border-left-width в borderLeftWidth*/
+
+        /*Задача может быть решена несколькими способами. Один из них – разбить строку по дефису str.split('-'), затем последовательно сконструировать новую.*/
+        function camelize(str) {
+            var arr = str.split('-');
+
+            for (var i = 1; i < arr.length; i++) {
+                // преобразовать: первый символ с большой буквы
+                arr[i] = arr[i].charAt(0).toUpperCase() + arr[i].slice(1);
+            }
+
+            return arr.join('');
+        }
+
+        console.log( camelize("background-color") ); // backgroundColor
+        console.log( camelize("list-style-image") ); // listStyleImage
+        console.log( camelize("-webkit-transition") ); // WebkitTransition
+
+
+
+
+
+
+
+        /*У объекта есть свойство className, которое хранит список «классов» – слов, разделенных пробелами:*/
+
+        /*Решение заключается в том, чтобы разбить className в массив классов, а затем пройтись по нему циклом. Если класс есть – удаляем его splice, заново объединяем массив в строку и присваиваем объекту.*/
+        function removeClass(obj, cls) {
+            var classes = obj.className.split(' ');
+
+            for (var i = 0; i < classes.length; i++) {
+                if (classes[i] == cls) {
+                    classes.splice(i, 1); // удалить класс
+                    i--; // (*)
+                }
+            }
+            obj.className = classes.join(' ');
+
+        }
+
+        var obj = {
+            className: 'open menu menu'
+        }
+
+        removeClass(obj, 'blabla');
+        removeClass(obj, 'menu')
+        console.log(obj.className) // open
+
+
+
+
+
+        /*Создайте функцию filterRangeInPlace(arr, a, b), которая получает массив с числами arr и удаляет из него все числа вне диапазона a..b. То есть, проверка имеет вид a ≤ arr[i] ≤ b. Функция должна менять сам массив и ничего не возвращать.*/
+
+        function filterRangeInPlace(arr, a, b) {
+
+            for (var i = 0; i < arr.length; i++) {
+                var val = arr[i];
+                if (val < a || val > b) {
+                    arr.splice(i--, 1);
+                }
+            }
+
+        }
+
+        var arr = [5, 3, 8, 1];
+
+        filterRangeInPlace(arr, 1, 4);
+        console.log( arr ); // [3, 1]
+
+
+
+
+
+        /*Сортировать в обратном порядке*/
+
+        var arr = [5, 2, 1, -10, 8];
+
+        function compareReversed(a, b) {
+            return b - a;
+        }
+
+        arr.sort(compareReversed);
+
+        console.log( arr );
+
+
+
+
+
+        /*Скопировать и отсортировать массив*/
+
+        /*Для копирования массива используем slice(), и тут же – сортировку:*/
+
+        var arr = ["HTML", "JavaScript", "CSS"];
+
+        var arrSorted = arr.slice().sort();
+
+        log( arrSorted, "h3" );
+        log( arr, "h3" );
+
+
+
+
+
+        //Используйте функцию sort для того, чтобы «перетрясти» элементы массива в случайном порядке.
+
+        /*Функция сортировки должна возвращать случайный результат сравнения.
+        Используйте для этого Math.random.
+         Обычно Math.random() возвращает результат от 0 до 1. Вычтем 0.5, чтобы область значений стала [-0.5 ... 0.5).*/
+
+        var arr = [1, 2, 3, 4, 5];
+
+        function compareRandom(a, b) {
+            return Math.random() - 0.5;
+        }
+
+        arr.sort(compareRandom);
+
+        console.log( arr );
+
+
+
+
+
+
+        /*Напишите код, который отсортирует массив объектов people по полю age.*/
+
+        /*Для сортировки объявим и передадим в sort анонимную функцию, которая сравнивает объекты по полю age:*/
+        // Наша функция сравнения
+        function compareAge(personA, personB) {
+            return personA.age - personB.age;
+        }
+
+        // проверка
+        var vasya = { name: "Вася", age: 23 };
+        var masha = { name: "Маша", age: 18 };
+        var vovochka = { name: "Вовочка", age: 6 };
+
+        var people = [ vasya , masha , vovochka ];
+
+        people.sort(compareAge);
+
+        // вывести
+        for(var i = 0; i < people.length; i++) {
+            console.log(people[i].name); // Вовочка Маша Вася
+        }
+
+
+
+
+        /*Вывести односвязный список*/
+
+        /*Такая структура данных интересна тем, что можно очень быстро разбить список на части, объединить списки, удалить или добавить элемент в любое место, включая начало. При использовании массива такие действия требуют обширных перенумерований.*/
+        var list = {
+            value: 1,
+            next: {
+                value: 2,
+                next: {
+                    value: 3,
+                    next: {
+                        value: 4,
+                        next: null
+                    }
+                }
+            }
+        };
+
+        function printReverseList(list) {
+            var arr = [];
+            var tmp = list;
+
+            while (tmp) {
+                arr.push(tmp.value);
+                tmp = tmp.next;
+            }
+
+            for (var i = arr.length - 1; i >= 0; i--) {
+                log( arr[i], "h3" );
+            }
+        }
+
+        printReverseList(list);
+
+
+
+
+
+
+        /*Оставить уникальные элементы массива*/
+
+        /*Решение ниже создаёт объект obj = {} и записывает в него все строки как имена свойств. А затем собирает свойства из объекта в массив через for..in. Дубликатов уже не будет.*/
+
+        function unique(arr) {
+            var obj = {};
+
+            for (var i = 0; i < arr.length; i++) {
+                var str = arr[i];
+                obj[str] = true; // запомнить строку в виде свойства объекта
+            }
+
+            return Object.keys(obj); // или собрать ключи перебором для IE8-
+        }
+
+        var strings = ["кришна", "кришна", "харе", "харе",
+            "харе", "харе", "кришна", "кришна", "8-()"
+        ];
+
+        console.log( unique(strings) ); // кришна, харе, 8-()
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </script>
 </head>
 <body>
