--- a/courses/others/-learn.javascript/js/array.html
+++ b/courses/others/-learn.javascript/js/array.html
@@ -411,7 +411,8 @@
 
     /*На входе массив чисел, например: arr = [1,2,3,4,5].
      Напишите функцию getSums(arr), которая возвращает массив его частичных сумм.
-     Иначе говоря, вызов getSums(arr) должен возвращать новый массив из такого же числа элементов, в котором на каждой позиции должна быть сумма элементов arr до этой позиции включительно.
+     Иначе говоря, вызов getSums(arr) должен возвращать новый массив из такого же числа элементов,
+     в котором на каждой позиции должна быть сумма элементов arr до этой позиции включительно.
      То есть:
      для arr = [ 1, 2, 3, 4, 5 ]
      getSums( arr ) = [ 1, 1+2, 1+2+3, 1+2+3+4, 1+2+3+4+5 ] = [ 1, 3, 6, 10, 15 ]*/
