--- a/courses/others/-learn.javascript/js/array.html
+++ b/courses/others/-learn.javascript/js/array.html
@@ -458,7 +458,15 @@
 
 
 
-    console.log("\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n");
+    console.log("\n\n\n\n\n\n");
+
+
+    const children = ['1', '2', '3', '4', '5', '6'];
+    const family = children.map(child => `Hi ${child}`);
+    console.log(family);
+
+
+    console.log("\n\n\n\n\n\n\n\n\n\n");
 
 
   </script>
