--- a/courses/others/laracasts/index.html
+++ b/courses/others/laracasts/index.html
@@ -9,6 +9,6 @@
 
 <h1>Hello !!</h1>
 
-<script src="output/array-method.js"></script>
+<script src="output/generators.js"></script>
 </body>
 </html>
