--- a/courses/others/-learn.javascript/js/date.html
+++ b/courses/others/-learn.javascript/js/date.html
@@ -179,6 +179,22 @@
     console.log("\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n");
 
 
+    // за этим будущее
+    var d = new Date(2014, 4, 30);
+    console.log(formatDate(d));
+
+    function formatDate(date) {
+      var printdate = new Intl.DateTimeFormat("ru", {
+        day: '2-digit',
+        month: '2-digit',
+        year: '2-digit'
+      });
+      return printdate.format(date);
+    }
+
+
+
+
   </script>
 </head>
 <body>
